--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,17 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.bebas {
+h1, h2, h3 {
   font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
 }
 
 header {
   background: url('./assets/HEADER.jpg');
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
 nav {
@@ -65,4 +70,76 @@ nav {
   border-right: 1px solid white;
   font-size: 1rem;
   padding: 0 .2rem;
+}
+
+.container {
+  max-width: 90vw;
+  margin: 0 auto;
+}
+
+form  {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin-top: 2rem;
+}
+
+.search_input {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid white;
+  width: fit-content;
+}
+
+.search_input img {
+  width: 1.5rem;
+}
+
+.search_input input {
+  border: none;
+  outline: none;
+  background: none;
+  color: white;
+  font-size: 1rem;
+}
+
+.search_input input::placeholder{
+  color: white
+}
+
+.main_content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: end;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 5rem;
+}
+
+.socials img {
+  width: 1.5rem;
+}
+
+.socials {
+  display: flex;
+  gap: 1rem;
+}
+
+.main {
+  text-align: center;
+}
+
+.main h1 {
+  font-size: 6rem;
+  color: white;
+  margin: 0;
+}
+
+.pry_btn {
+  background: white;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  box-shadow: 5px 5px 0 black;
 }
