--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,7 @@ form  {
   padding: 1rem 2rem;
   text-transform: uppercase;
   box-shadow: 5px 5px 0 black;
+  width: fit-content;
 }
 
 section {
@@ -232,15 +233,143 @@ h3 {
 .gray_bg {
   color: white;
   max-width: 100vw;
-  padding: 4rem 0;
+  padding: 3rem 0;
+  background: #222222;
+}
+
+.logo_bg {
+  max-width: 90vw;
+  margin: 0 auto;
   background: url(./assets/logo.svg), #222222;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   background-blend-mode: overlay;
+  height: 15rem;
+  display: grid;
+  place-content: center;
+  text-align: center;
 }
 
-.gray_bg div {
-  max-width: 90vw;
-  margin: 0 auto;
+.gray_bg div h2{
+  font-size: 5rem;
+  margin: 0;
+  line-height: .8;
+}
+
+.gray_bg div a {
+  width: fit-content;
+  margin: 1rem auto auto;
+}
+
+.discount {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  gap: 2rem;
+  max-width: 60vw;
+
+  img {
+    width: 400px;
+    aspect-ratio: 1/1.1;
+    object-fit: cover;
+  }
+
+  h2 {
+    font-size: 5rem;
+    line-height: 1;
+    margin: 0;
+  }
+
+  .btns {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+}
+
+.new {
+  background: url('./assets/model\ 2.jpg'), #2222229a;
+  background-blend-mode: overlay;
+  height: 25rem;
+  background-position: center;
+  background-size: cover;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2rem;
+  border-top: 15px solid black;
+  border-bottom: 15px solid black;
+  margin: 8rem auto 0;
+
+  .pry_btn {
+    align-self: flex-end;
+  }
+
+  h2 {
+    font-size: 5rem;
+    line-height: .9;
+  }
+
+  p {
+    margin: 0;
+    width: 30%;
+  }
+}
+
+.new_products {
+  margin: 0 auto 4rem;
+
+  .product_img {
+    height: 200px;;
+  }
+}
+
+footer {
+  background: #222222;
+  color: white;
+  padding: 3rem 0;
+
+  .logo img {
+    width: 10rem;
+    margin-bottom: 1rem;
+  }
+
+  .top {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .newsletter {
+    form {
+      margin-top: 1rem;
+
+      input {
+        border: none;
+        outline: none;
+        background: #161616;
+        color: white;
+        font-size: .8rem;
+        /* width: 300px; */
+        padding: 1rem;
+      }
+
+      button {
+        background: #161616;
+        border: 1px solid white;
+        outline: none;
+        color: white;
+        font-size: 1.5rem;
+        font-family: 'Bebas Neue', sans-serif;
+        padding: .4rem 1rem;
+      }
+    }
+  }
+
+  .logo_bg {
+    margin-top: 1rem;
+    /* margin-bottom: 1rem; */
+    height: 10rem;
+  }
 }
